@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST cvs-fast-export-1.0.tar.gz 96414 SHA256 e5eff5a153621d14e2edf1548b5c2a2de3a2c76f41c7940f9f1f8ecb4a736ae3 SHA512 150bdfa4d8f71096588d166df071e010a196695b3e4fb71c98a66689a22b2011f15e95bcb2cc4202639a9e245af5e36cf6c275f167fb0b554a64e9f84a5f9bc9 WHIRLPOOL 4b0468389ff068463efd076b7f4e4db63924b19bbbd5ba3259d0755b844ea74ac44fc87ab742ddb072644f1a9309b9d467d2fb3087eef2cfd122886954d2e18f
+DIST cvs-fast-export-1.14.tar.gz 101982 SHA256 e2a4ecc9c39bbb75301eeaf0857e11ba25a02414d680edd126eb01e1cfe697a4 SHA512 375b1288f7626cd117cdd127996463f0174250bd13c9db875d47b2b5cefa5a000cf309a714d58a922c6078f9d56a3fcb42edb6d652c1fb26965b6edc6e37e7f4 WHIRLPOOL 73260f65e5ddd1d032e09ee8862458faf77c34df980541e172cfdcef134bf707fe4891899b2bf526057ebca579423326f2befcdb6bbbcae32755b40efb3bb335
 EBUILD cvs-fast-export-1.0.ebuild 919 SHA256 682548a2ed7371fe1e2fed85d1c755e9d2708fdd1c38a3edcc76abfde350d2d6 SHA512 204d8e0405dd4f78db8759a690e2e8fbc79d7cd49b6a32cde833964a4e4933053aca13712fae61cba83596551da936031ab2733d53064e282a38ae8cb5f2a432 WHIRLPOOL a1df6be64e97930ecadf0e5b5afcc63110801216232fc3de4a8f24b1a93484a72b2f38600d70bdfad2fa81446a9763a1ea9654855ede66399b72318b5445c67f
-MISC ChangeLog 436 SHA256 b26a816ed440b264e7e4022d12c4ac582506f3893dc77d67f565a4582fd3710c SHA512 bd847451edc8b72f3b755914d6ced04500135aa32c66783102b1ea4f45dba3227cde7a3f89e819ed98babd2bebd6b945c294a06dfa3b07c60ed1228f287426bf WHIRLPOOL 34bc37a21bfad8a21dcbf30516f1623c41322d7ffd55048b1c5d853eda26c8c5c544bcc95064c7ef6f12bc72176cd450497d157fd73174592a717a280881ab78
+EBUILD cvs-fast-export-1.14.ebuild 920 SHA256 3805dce8bb78ea69805636ed5db39345f827b2161a452f976a353c2e0e2dc8b3 SHA512 85af1700d38b72f6d8d47706a30b0737ac6845413c883cfa56d5d800a18b94bb96b8d21d357f02529ba0f2579be3a2ba244e4fc24a39bcb4ac96452d756d6732 WHIRLPOOL ebce22e82d51cfafb9d0080b2e3b4eaf318ad2962093004f67380a04233cc01d159608dfb770cf90af7787e6b1fa5168ade4c077c787cc65d3e629983e27df48
+MISC ChangeLog 576 SHA256 e8807fd2899a2f553f1ff23ba011b81d537e58fd6e8ec036d3e2c8df627db6f5 SHA512 b52279437c2eeb0352bc79380c40c15048f22f159bc5dff08333e29c8c765fac7e76faac057aad35d07f1898a59cd4161ade05af4c6a5476fbbb538e0ca815a2 WHIRLPOOL d9020ccffaf53a46fcd422f068cf609d85c555dec3f0a19cd81c94c566ed384884079427fc1bd262c9d42f3f257e4e386ddf17f26b07ddcb45ff312f530572f6
 MISC metadata.xml 343 SHA256 cc746aa955d09e64971108ac9b68ce1a948d063058f35d35150f0f138b0249d2 SHA512 3c86b4e4baef5837d41816f7dfed1a8460d503d31241c4aa320ed68324df53b1d3d0240fd9d53c094bcd593f3993c711252ff75586ba1973f720ad7c040557d1 WHIRLPOOL 725a264a73dae336580fb99a042dfd1a014aa7541b1469d60e360a3f6bb4ede5b05b37df12a87bd837af06053fde9a38bbb3a091cf489dddd7f6acde65d4f639
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlK/UEAACgkQcaHudmEf86q41wCfT6O6Q1Cyj1RSdHaoPVGUpVGU
-yGgAnR+9Au3cFziroJA0B7PdZ3x88DDV
-=+mQK
+iEYEAREIAAYFAlPrvLUACgkQcaHudmEf86qFOwCfZIloYVqYK+2ENu7IAn9QTvBn
+IzQAnRJgeLuRLNE+XNaGyPBhzp1e64DN
+=5IZJ
 -----END PGP SIGNATURE-----
