@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/cvs-fast-export
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvs-fast-export/ChangeLog,v 1.1 2013/12/28 22:32:24 slyfox Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/cvs-fast-export/ChangeLog,v 1.2 2014/08/13 19:30:00 slyfox Exp $
+
+*cvs-fast-export-1.14 (13 Aug 2014)
+
+  13 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
+  +cvs-fast-export-1.14.ebuild:
+  Version bump.
 
 *cvs-fast-export-1.0 (28 Dec 2013)
 
